tests/NormalTests/paczka1/fuzzy1/19718850.err
Error in line 11: S3 A519 34,6
Error in line 15: S3 A519 156,0
Error in line 8: nOfQkI5 S4 63,7
Error in line 26: S3 S4 13,5
Error in line 30: S3 S4 55,2
Error in line 33: S3 A192 30,4
Error in line 35: S3 A192 128,3
Error in line 31: 0dOqGSy S4 10,3
Error in line 38: 0dOqGSy S3 11,1
